--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Landing Page</title>
 </head>
 <body>
     <header>
-        <h4>Header Logo</h4>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
+        <div class="header-top">
+            <h4>Header Logo</h4>
+            <ul class="header-links">
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
+            </ul>
+        </div>
         <h1>This website is awesome</h1>
         <p>This website has some subtext that goes here under the main title. It's smaller fond and color is lower contrast.</p>
         <button type="button">Sign up</button>
