--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
                 <li><a href="">header link three</a></li>
             </ul>
         </div>
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's smaller fond and color is lower contrast.</p>
-        <button type="button">Sign up</button>
-        <div>This is place holder for an image</div>
+        <div class="header-bot">
+            <div class="header-text-and-button">
+                <h1 class="hero-main-text">This website is awesome</h1>
+                <p class="hero-secondary-text">This website has some subtext that goes here under the main title. It's smaller font and color is lower contrast.</p>
+                <button type="button">Sign up</button>
+            </div>
+            <div class="header-image">This is place holder for an image</div>
+        </div>
     </header>
     <div>
         <h2>Some random information.</h2>
