made header as wide as body

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="header-image">This is place holder for an image</div>
         </div>
     </header>
-    <div>
+    <div class="content">
         <h2>Some random information.</h2>
         <div>
             <div>image 1</div>
@@ -50,6 +50,6 @@
         <p>Sign up for our product by clicking that button right over there!</p>
         <button type="button">Sign up</button>
     </div>
-    <footer>Copyright © FSOsuit</footer>
+    <footer>Copyright © The Odin Project 2021</footer>
 </body>
 </html>
