--- a/index.html
+++ b/index.html
@@ -9,22 +9,21 @@
 </head>
 <body>
     <header>
-        <div class="header-top">
-            <h4>Header Logo</h4>
-            <ul class="header-links">
-                <li><a href="">header link one</a></li>
-                <li><a href="">header link two</a></li>
-                <li><a href="">header link three</a></li>
+        <nav>
+            <img class="left" src="images/mikis/logo.png" alt="Header Logo">
+            <ul class="right">
+                <li><a href="">Home</a></li>
+                <li><a href="">FAQ</a></li>
+                <li><a href="">Contacts</a></li>
             </ul>
-        </div>
+        </nav>
         <div class="header-bot">
-            <div class="header-text-and-button">
-                <h1 class="hero-main-text">This website is awesome</h1>
-                <p class="hero-secondary-text">This website has some subtext that goes here under the main title. It's smaller font and color is lower contrast.</p>
+            <div class="header-text-button">
+                <div class="hero-main-text">Bunnies are awesome!</div>
+                <p class="hero-secondary-text">Bunnies are known for being hide and seek champions. And for being the best cuddle buddies.</p>
                 <button type="button">Sign up</button>
             </div>
-            <div class="header-image">This is place holder for an image</div>
-        </div>
+            <img class="header-image" src="images/mikis/20210127_222333.jpg">
     </header>
     <div class="content">
         <h2>Some random information.</h2>
