made a contet part of the page with 4 images

--- a/index.html
+++ b/index.html
@@ -26,16 +26,24 @@
             <img class="header-image" src="images/mikis/20210127_222333.jpg">
     </header>
     <div class="content">
-        <h2>Some random information.</h2>
-        <div>
-            <div>image 1</div>
-            <div>this is some subtext under an ilustrration or image.</div>
-            <div>image 2</div>
-            <div>this is some subtext under an ilustrration or image.</div>
-            <div>image 3</div>
-            <div>this is some subtext under an ilustrration or image.</div>
-            <div>image 4</div>
-            <div>this is some subtext under an ilustrration or image.</div>
+        <div class="content-text">Bunny Facts</div>
+        <div class="icons-text">
+            <div class="img-text">
+                <img id="first-small-image" class="small-img" src="images/mikis/first.jpg" alt="Bunny with dry grass">
+                <div>Bunnies eat more than 30 times a day. They love fruits and different veggies. Just be careful to not overfeed your rabbit and stick to basics.</div>
+            </div>
+            <div class="img-text">
+                <img class="small-img" src="images/mikis/second.jpg" alt="Bunny">
+                <div>In the wild bunnies like to dig holes, at home they should get their own roof over their head.</div>
+            </div>
+            <div class="img-text">
+                <img class="small-img" src="images/mikis/third.jpg" alt="Bunny">
+                <div>Bunnies love to cuddle and sleep next to you, just not for the long time.</div>
+            </div>
+            <div class="img-text">
+                <img class="small-img" src="images/mikis/fourth.jpg" alt="Bunny">
+                <div>Curiosity is one of their best characteristics and they will explore every corner.</div>
+            </div>
         </div>
     </div>
     <div>
