created quote section

--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
         <div class="icons-text">
             <div class="img-text">
                 <img id="first-small-image" class="small-img" src="images/mikis/first.jpg" alt="Bunny with dry grass">
-                <div>Bunnies eat more than 30 times a day. They love fruits and different veggies. Just be careful to not overfeed your rabbit and stick to basics.</div>
-            </div>
+                <p>Bunnies eat more than 30 times a day. They love fruits and different veggies. Just be careful to not overfeed your rabbit and stick to basics.</div>
+                </p>
             <div class="img-text">
                 <img class="small-img" src="images/mikis/second.jpg" alt="Bunny">
-                <div>In the wild bunnies like to dig holes, at home they should get their own roof over their head.</div>
+                <p>In the wild bunnies like to dig holes, at home they should get their own roof over their head.</p>
             </div>
             <div class="img-text">
                 <img class="small-img" src="images/mikis/third.jpg" alt="Bunny">
-                <div>Bunnies love to cuddle and sleep next to you, just not for the long time.</div>
+                <p>Bunnies love to cuddle and sleep next to you, just not for the long time.</p>
             </div>
             <div class="img-text">
                 <img class="small-img" src="images/mikis/fourth.jpg" alt="Bunny">
-                <div>Curiosity is one of their best characteristics and they will explore every corner.</div>
+                <p>Curiosity is one of their best characteristics and they will explore every corner.</p>
             </div>
         </div>
     </div>
-    <div>
+    <div class="quote">
         <p>
-            This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            “Do you happen to know what the penalty is for shooting a fricaseeing rabbit without a fricaseeing rabbit license?”
         </p>
-        <p>-Thor, God of Thunder</p>
+        <p style="font-weight: bold; align-self: flex-end;">- Bugs Bunny</p>
     </div>
     <div>
         <p>Call to action! It's time!</p>
