page done with new images

--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
             <div class="header-text-button">
                 <div class="hero-main-text">Bunnies are awesome!</div>
                 <p class="hero-secondary-text">Bunnies are known for being hide and seek champions. And for being the best cuddle buddies.</p>
-                <button type="button">Sign up</button>
+                <button type="button" class="b-noborder">Sign up</button>
             </div>
-            <img class="header-image" src="images/mikis/20210127_222333.jpg">
+            <img class="header-image" src="images/mikis/hero.jpg">
+        </div>
     </header>
     <div class="content">
-        <div class="content-text">Bunny Facts</div>
+        <div class="content-text">About Bunnies</div>
         <div class="icons-text">
             <div class="img-text">
-                <img id="first-small-image" class="small-img" src="images/mikis/first.jpg" alt="Bunny with dry grass">
-                <p>Bunnies eat more than 30 times a day. They love fruits and different veggies. Just be careful to not overfeed your rabbit and stick to basics.</div>
-                </p>
+                <img class="small-img" src="images/mikis/first.jpg" alt="Bunny eating grass">
+                <p>Bunnies eat more than 30 times a day. They love fruits and different veggies. Just be careful to not overfeed your rabbit and stick to basics.</p>
+            </div>
             <div class="img-text">
                 <img class="small-img" src="images/mikis/second.jpg" alt="Bunny">
                 <p>In the wild bunnies like to dig holes, at home they should get their own roof over their head.</p>
@@ -46,16 +47,22 @@
             </div>
         </div>
     </div>
-    <div class="quote">
-        <p>
-            “Do you happen to know what the penalty is for shooting a fricaseeing rabbit without a fricaseeing rabbit license?”
-        </p>
-        <p style="font-weight: bold; align-self: flex-end;">- Bugs Bunny</p>
+    <div class="quote-container">
+        <div class="quote">
+            <p>
+                “Do you happen to know what the penalty is for shooting a fricaseeing rabbit without a fricaseeing rabbit license?”
+            </p>
+            <p style="font-weight: bold; align-self: flex-end;">- Bugs Bunny</p>
+        </div>
     </div>
-    <div>
-        <p>Call to action! It's time!</p>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button type="button">Sign up</button>
+    <div class="vote">
+        <div class="container">
+            <div class="vote-text">
+                <p class="main">Vote for your favorite bunny NOW!</p>
+                <p class="secondary">Sign up to vote by clicking that button  right over there!</p>
+            </div>
+            <button type="button" class="special">Sign up</button>
+        </div>
     </div>
     <footer>Copyright © The Odin Project 2021</footer>
 </body>
